1. introduce customized extension finder to support loading extensions from multiple jars in a single plugin's classpath 2. resolve a build warning